@@ -24,6 +24,9 @@
 
 """Functions and widget to represent exceptions to the user"""
 
+
+from PyQt4 import QtGui
+
 from camelot.core.utils import ugettext as _
 from camelot.core.exception import UserException
 
@@ -35,11 +38,11 @@ def register_exception(logger, text, exception):
     that serialized form can be fed to the model_thread_exception_message_box 
     function.
     
-    :return: a tuple with exception information """
+    :return: a tuple with exception information
+    """
     if isinstance( exception, (UserException,) ):
         # this exception is not supposed to generate any logging
         # or inform the developer about something
-
         return (exception.title, 
                 exception.text, 
                 exception.icon, 
@@ -50,6 +53,7 @@ def register_exception(logger, text, exception):
     title = _('Exception')
     text  = _('An unexpected event occurred')
     icon  = None
+    # chop the size of the text to prevent error dialogs larger than the screen
     resolution = unicode(exception)[:1000]
     import traceback, cStringIO
     sio = cStringIO.StringIO()
@@ -57,23 +61,34 @@ def register_exception(logger, text, exception):
     detail = sio.getvalue()
     sio.close()
     return (title, text, icon, resolution, detail)
+
+class ExceptionDialog(QtGui.QMessageBox):
+    """Dialog to display an exception to the user
+
+    .. image:: /_static/controls/user_exception.png 
+    """
+
+    def __init__( self, exception_info ):
+        """Dialog to display a serialized exception, as returned
+        by :func:`register_exception`
+
+        :param exception_info: a tuple containing exception information
+        """
+
+        (title, text, icon, resolution, detail) = exception_info
+        super( ExceptionDialog, self ).__init__(QtGui.QMessageBox.Warning,
+                                                unicode(title), unicode(text))
+        self.setInformativeText(unicode(resolution or ''))
+        self.setDetailedText(unicode(detail or ''))
     
-def model_thread_exception_message_box(exception_info, title=None, text=None):
+def model_thread_exception_message_box(exception_info):
     """Display an exception that occurred in the model thread in a message box,
-  use this function as the exception argument in the model thread's post function
-  to represent the exception to the user
+    use this function as the exception argument in the model thread's post function
+    to represent the exception to the user
     
-  :param exception_info: a tuple containing exception information
-  """
-    from PyQt4 import QtGui
-    (exc_title, exc_text, icon, resolution, detail) = exception_info
-    title = title or exc_title
-    text = text or exc_text
-    msgBox = QtGui.QMessageBox(QtGui.QMessageBox.Warning,
-                               unicode(title), unicode(text))
-    # chop the size of the text to prevent error dialogs larger than the screen
-    msgBox.setInformativeText(unicode(resolution or ''))
-    msgBox.setDetailedText(unicode(detail or ''))
-    msgBox.exec_()
+    :param exception_info: a tuple containing exception information
+    """
+    dialog = ExceptionDialog( exception_info )
+    dialog.exec_()
 
 
